--- a/ScrambledPass/MainWindow.xaml
+++ b/ScrambledPass/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ScrambledPass" Height="auto" Width="450" MaxHeight="350" SizeToContent="Height" BorderThickness="0">
-    <Grid Margin="0,0,0,5" Width="440" Height="auto" MaxHeight="350" VerticalAlignment="Top">
+    <Grid x:Name="mainUI" Margin="0,0,0,5" Width="440" Height="auto" MaxHeight="350" VerticalAlignment="Top">
         <StackPanel x:Name="pnl_layout" Width="440" Height="auto" VerticalAlignment="Top" Margin="0" HorizontalAlignment="Left">
             <CheckBox x:Name="chkb_randWords" Content="Words" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="True" Click="SetWordsPanelStatus"/>
             <StackPanel x:Name="pnl_words" HorizontalAlignment="Left" Height="50" Margin="30,0,0,0" VerticalAlignment="Top" Width="248">
