--- a/ScrambledPass/Views/ErrorMessage.xaml
+++ b/ScrambledPass/Views/ErrorMessage.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ScrambledPass.Views"
         mc:Ignorable="d"
-        Title="ErroMessage" Height="450" Width="800" SizeToContent="WidthAndHeight" ResizeMode="NoResize" Closing="Window_Closing">
+        Title="ErrorMessage" Height="450" Width="800" SizeToContent="WidthAndHeight" ResizeMode="NoResize" Closing="Window_Closing">
     <Grid MinWidth="200" MinHeight="100" Margin="10">
         <StackPanel>
             <Label x:Name="lbl_message" Content="placeholder error message" HorizontalContentAlignment="Center" Margin="0,10,0,0" HorizontalAlignment="Center"></Label>
