--- a/ScrambledPass/View/MainWindow.xaml
+++ b/ScrambledPass/View/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ScrambledPass.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ScrambledPass" Height="auto" Width="450" MaxHeight="360" SizeToContent="Height" BorderThickness="0" Padding="0">
+        Title="ScrambledPass" Height="auto" Width="450" MaxHeight="360" SizeToContent="Height" BorderThickness="0" Padding="0" ResizeMode="NoResize">
     <Grid x:Name="mainUI" Margin="0" Width="440" Height="auto" MaxHeight="350" VerticalAlignment="Top">
         <StackPanel x:Name="pnl_layout" Width="440" Height="auto" VerticalAlignment="Top" Margin="0" HorizontalAlignment="Left" MinHeight="150">
             <CheckBox x:Name="chkb_randWords" Content="Words" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="True" Click="SetWordsPanelStatus"/>
@@ -37,36 +37,33 @@
                 <Label x:Name="lbl_passEntropy" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="420" Padding="5,5,15,-11" HorizontalContentAlignment="Right"/>
                 <Label x:Name="lbl_passStrength" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="420" Padding="5,5,15,-11" HorizontalContentAlignment="Right"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
-                <Button x:Name="btn_generate" Content="Generate" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="75" Click="GeneratePassword"/>
-                <Button x:Name="btn_loadWordList" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="LoadCustomWordList" >
+            <StackPanel Orientation="Horizontal" Margin="5,10,5,5">
+                <Button x:Name="btn_generate" Content="Generate" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="75" Click="GeneratePassword"/>
+                <Button x:Name="btn_loadWordList" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="LoadCustomWordList" BorderBrush="#00707070" >
                     <Button.Background>
                         <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/openFile.PNG" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="btn_loadDefWordList" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="LoadDefaultWordList" ToolTip="Reload default word list">
+                <Button x:Name="btn_loadDefWordList" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="20" Width="20" Click="LoadDefaultWordList" ToolTip="Reload default word list" BorderBrush="#00707070">
                     <Button.Background>
                         <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/reload.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
                 <Separator Margin="0" Width="270" Visibility="Hidden"/>
                 <CheckBox x:Name="chkb_ClrClipboard" Content="Clear clipboard after 20s" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Center" Visibility="Collapsed"/>
-                <Button x:Name="btn_settings" Height="20" Width="20" Click="ToggleSettingsMenu" >
+                <Button x:Name="btn_settings" Height="20" Width="20" Click="ToggleSettingsMenu" BorderBrush="#00707070" >
                     <Button.Background>
                         <ImageBrush Stretch="Uniform" ImageSource="pack://siteoforigin:,,,/Resources/settings.png"/>
                     </Button.Background>
                 </Button>
             </StackPanel>
         </StackPanel>
-        <StackPanel x:Name="pnl_settings" Width="440" Height="auto" VerticalAlignment="Top" Margin="5" HorizontalAlignment="Left" MinHeight="150" Visibility="Collapsed">
+        <StackPanel x:Name="pnl_settings" Width="440" Height="auto" VerticalAlignment="Top" Margin="5" HorizontalAlignment="Left" MinHeight="130" Visibility="Collapsed">
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <Label x:Name="lbl_language" Content="Language"/>
-                <ComboBox x:Name="cb_language" SelectionChanged="SelectLanguage">
-                    <ListBoxItem Content="EN" IsSelected="True"/>
-                    <ListBoxItem Content="PL"/>
-                </ComboBox>
+                <ComboBox x:Name="cb_language" SelectionChanged="SelectLanguage" ItemsSource="{Binding CmbContent}"/>
             </StackPanel>
-            <CheckBox x:Name="chkb_loadCustomWordList" Content="Load custom wordlist on startup" Checked="ToggleCustomWordListReload" Unchecked="ToggleCustomWordListReload" />
+            <CheckBox x:Name="chkb_loadCustomWordList" Content="Load custom wordlist on startup" Checked="ToggleCustomWordListReload" Unchecked="ToggleCustomWordListReload" Margin="3,0,0,0" />
             <StackPanel HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
                     <Label x:Name="lbl_defWordCount" Content="Def word count:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                     <TextBox x:Name="txtb_defWordCount" HorizontalAlignment="Left" Height="23" Text="5" VerticalAlignment="Center" Width="40" TextChanged="SetDefWordCount"/>
@@ -75,13 +72,13 @@
                 <Label x:Name="lbl_defCharCount" Content="Def char count:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                 <TextBox x:Name="txtb_defCharCount" HorizontalAlignment="Left" Height="23" Text="5" VerticalAlignment="Center" Width="40" TextChanged="SetDefCharCount"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0" >
                 <Button x:Name="btn_defaultSettings" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="RestoreDefaultSettings" Margin="0,0,10,0" >
                     <Button.Background>
                         <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/reload.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="btn_closeSettings" Content="Back" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="ToggleSettingsMenu" Margin="0,0,10,0" />
+                <Button x:Name="btn_closeSettings" Content="Back" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="ToggleSettingsMenu" />
             </StackPanel>
         </StackPanel>
     </Grid>
