--- a/ScrambledPass/View/MainWindow.xaml
+++ b/ScrambledPass/View/MainWindow.xaml
@@ -58,7 +58,7 @@
                 </Button>
             </StackPanel>
         </StackPanel>
-        <StackPanel x:Name="pnl_settings" Width="440" Height="auto" VerticalAlignment="Top" Margin="5" HorizontalAlignment="Left" MinHeight="130" Visibility="Collapsed">
+        <StackPanel x:Name="pnl_settings" Width="440" Height="auto" VerticalAlignment="Top" Margin="0" HorizontalAlignment="Left" MinHeight="130" Visibility="Collapsed">
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <Label x:Name="lbl_language" Content="Language"/>
                 <ComboBox x:Name="cb_language" SelectionChanged="SelectLanguage" ItemsSource="{Binding CmbContent}"/>
@@ -72,8 +72,8 @@
                 <Label x:Name="lbl_defCharCount" Content="Def char count:" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                 <TextBox x:Name="txtb_defCharCount" HorizontalAlignment="Left" Height="23" Text="5" VerticalAlignment="Center" Width="40" TextChanged="SetDefCharCount"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0" >
-                <Button x:Name="btn_defaultSettings" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="RestoreDefaultSettings" Margin="0,0,10,0" >
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,10,5" >
+                <Button x:Name="btn_defaultSettings" Height="20" Width="20" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="RestoreDefaultSettings" Margin="0,0,10,0" BorderBrush="#00707070" >
                     <Button.Background>
                         <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/reload.png" Stretch="Uniform"/>
                     </Button.Background>
