--- a/ScrambledPass/Views/ErrorMessage.xaml
+++ b/ScrambledPass/Views/ErrorMessage.xaml
@@ -1,9 +1,8 @@
-﻿<Window x:Class="ScrambledPass.View.ErrorMessage"
+﻿<Window x:Class="ScrambledPass.Views.ErrorMessage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ScrambledPass.View"
         mc:Ignorable="d"
         Title="ErrorMessage" Height="450" Width="800" SizeToContent="WidthAndHeight" ResizeMode="NoResize" Closing="Window_Closing">
     <Grid MinWidth="200" MinHeight="100" Margin="10">
