Theming implementation + refactoring
White theme uses default values, dark requires more work for built-in controls (combo boxes, radio buttons).

--- a/ScrambledPass/Languages/en-US.xaml
+++ b/ScrambledPass/Languages/en-US.xaml
@@ -18,6 +18,7 @@
     <system:String x:Key="UIPassGreat">great</system:String>
     <system:String x:Key="UIGenerate">Generate</system:String>
     <system:String x:Key="UILanguage">Language</system:String>
+    <system:String x:Key="UITheme">Theme</system:String>
     <system:String x:Key="UILoadWordList">Load last used wordlist on startup</system:String>
     <system:String x:Key="UIDefWordCount">Default word count</system:String>
     <system:String x:Key="UIDefCharacterCount">Default character count</system:String>
