--- a/ScrambledPass/App.xaml
+++ b/ScrambledPass/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application x:Class="ScrambledPass.App"
+﻿<Application
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2" x:Class="ScrambledPass.App"
+             >
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
