--- a/ScrambledPass/Views/SettingsView.xaml
+++ b/ScrambledPass/Views/SettingsView.xaml
@@ -5,12 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         d:DesignHeight="450" d:DesignWidth="800">
-    
+
     <Grid>
         <StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <Label x:Name="lbl_language" Content="{DynamicResource UILanguage}"/>
                 <ComboBox x:Name="cb_language" SelectionChanged="SelectLanguage"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
+                <Label x:Name="lbl_theme" Content="{DynamicResource UITheme}"/>
+                <ComboBox x:Name="cb_theme" SelectionChanged="SelectTheme"/>
             </StackPanel>
             <CheckBox x:Name="chkb_loadCustomWordList" Content="{DynamicResource UILoadWordList}" Checked="ToggleCustomWordListReload" Unchecked="ToggleCustomWordListReload" Margin="3,0,0,0" />
             <StackPanel HorizontalAlignment="Left" Height="30" VerticalAlignment="Top" Width="220" Orientation="Horizontal">
